Bug 15210 - synthetic_pathref AFP_AfpInfo failed errors
Summary: synthetic_pathref AFP_AfpInfo failed errors
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.17.1
Hardware: All All
: P5 normal with 5 votes (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-20 15:24 UTC by Tom Vincent
Modified: 2023-02-16 16:36 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix for 4.17.next, 4.16.next. (1.30 KB, patch)
2022-11-16 17:48 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Vincent 2022-10-20 15:24:01 UTC
When attempting a Time Machine backup, my system's journal is being flooded with the following errors:

smbd[30867]: [2022/09/26 13:15:59.811060,  0] ../../source3/smbd/files.c:1193(synthetic_pathref)
smbd[30867]:   synthetic_pathref: opening [MacBook Pro.sparsebundle/mapped/1310:AFP_AfpInfo] failed

The backup in Time Machine itself fails.

Clients are MacOS 12.6.

More reports can be at the following, which also suggest the issue is not specific to Time Machine: https://forums.unraid.net/bug-reports/stable-releases/smbd6110-pathref-errors-r2111/

The share has been configured via the following docs: https://wiki.samba.org/index.php/Configure_Samba_to_Work_Better_with_Mac_OS_X

I can reproduce with v4.17.x (4.17.0 and 4.17.1). I also set up a new Time Machine backup in case of corruption, to no avail.

Downgrading to 4.16.5 resolves the issue.
Comment 1 Jeremy Allison 2022-11-15 01:14:42 UTC
Hmmm. I think DBG_ERR() is too noisy a debug level here. Should be DBG_NOTICE I think.
Comment 2 Samba QA Contact 2022-11-16 06:01:03 UTC
This bug was referenced in samba master:

f0ca9546102acf09f1834c03f8907ed26bfc80f8
Comment 3 Jeremy Allison 2022-11-16 17:48:24 UTC
Created attachment 17660 [details]
git-am fix for 4.17.next, 4.16.next.

Cherry-picked from master.
Comment 4 Jeremy Allison 2023-01-13 17:56:48 UTC
Comment on attachment 17660 [details]
git-am fix for 4.17.next, 4.16.next.

Ping ! One more for the release... :-).
Comment 5 Ralph Böhme 2023-01-13 18:28:03 UTC
Reassigning to Jule for inclusion in 4.16 and 4.17.
Comment 6 Jule Anger 2023-01-16 09:31:25 UTC
Pushed to autobuild-v4-{17,16}-test.
Comment 7 Samba QA Contact 2023-01-16 10:48:35 UTC
This bug was referenced in samba v4-16-test:

627a9886da8fa8c2dbd0aa4cf273a5ebc70879ed
Comment 8 Samba QA Contact 2023-01-16 10:50:27 UTC
This bug was referenced in samba v4-17-test:

580cfa7213874087a042e77c6f82d7b513e1705e
Comment 9 Jule Anger 2023-01-16 11:58:20 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2023-01-26 17:50:21 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.5):

580cfa7213874087a042e77c6f82d7b513e1705e
Comment 11 Samba QA Contact 2023-02-16 16:36:45 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.9):

627a9886da8fa8c2dbd0aa4cf273a5ebc70879ed